syntax = "proto3";

option java_package = "ms.domwillia.jvmemory";
option java_outer_classname = "Definitions";

message ClassDefinition {
    string name = 1;
    string class_type = 2;
    string visibility = 3;
    string super_class = 4;
    string generics = 5;

    repeated string interfaces = 6;
    repeated FieldDefinition fields = 7;
    repeated MethodDefinition methods = 8;
}

message MethodDefinition {
    string name = 1;
    string signature = 2;
    string visibility = 3;
    bool final = 4;
    bool static = 5;
    bool abstract = 6;
    string generics = 7;

    repeated string exceptions = 8;
    repeated LocalVariable local_vars = 9;
}

message LocalVariable {
    int32 index = 1;
    string name = 2;
    string type = 3;
    string generics = 4;
}

message FieldDefinition {
    string name = 1;
    string type = 2;
    string visibility = 3;
    bool final = 4;
    bool static = 5;
    string generics = 6;
}
